[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behavex"
version = "4.1.2"
description = "Agile testing framework on top of Behave (BDD)."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Hernan Rey", email = "behavex_users@googlegroups.com" }
]
requires-python = ">=3.5"
dependencies = [
    "behave==1.2.6",
    "behavex-images>=3.0.10",
    "jinja2",
    "configobj",
    "minify-html",
    "csscompressor"
]
# Add dynamic field to handle entry points
dynamic = ["entry-points"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing"
]

[project.urls]
homepage = "https://github.com/hrcorval/behavex"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black"
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.scripts]
behavex = "behavex.runner:main"
