[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behavex"
version = "4.5.0rc2"
description = "Agile testing framework on top of Behave (BDD)."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Hernan Rey", email = "behavex_users@googlegroups.com" }
]
requires-python = ">=3.5"
dependencies = [
    # Support behave 1.2.6 (stable) and 1.3.0 (with compatibility fixes)
    "behave>=1.2.6,<=1.3.0",
    "behavex-images==3.3.0rc3",
    "allure-python-commons",
    "jinja2",
    "configobj",
    "minify-html",
    "csscompressor",
    "packaging"
]
# Entry points are statically defined below

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing"
]

[project.urls]
homepage = "https://github.com/hrcorval/behavex"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black"
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.scripts]
behavex = "behavex.runner:main"
behavex-allure = "behavex.outputs.formatters.allure_behavex_formatter:main"
